--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+#连接git
 server.port=8887
 git.Client_id=5e52ee63aefdaf93afea
 git.Client_secret=6791c8bb6d0b1e42f99886c36429be7dd35f07b5
 git.Uri=http://localhost:8887/callback
 
-spring.datasource.url=jdbc:h2:~/CommunityH2
-spring.datasource.driverClassName=org.h2.Driver
+# 连接mysql
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/community?serverTimezone=CTT&useUnicode=true&useSSL=false&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
+
+
+
+#分页助手
+pagehelper.helper-dialect=mysql
+#驼峰匹配
+mybatis.configuration.map-underscore-to-camel-case=true
